style: fix overflow-x on landing page

--- a/src/css/docusaurus.scss
+++ b/src/css/docusaurus.scss
@@ -1,5 +1,6 @@
 .main-wrapper {
   position: relative;
+  overflow-x: hidden;
 }
 
 .footer__copyright {
